=== 5.99.0 (2025-12-01)

* Support passing a set as a Dataset#full_text_search terms argument on MSSQL, MySQL, and PostgreSQL (jeremyevans)

* Optimize Dataset#as_set calls to avoid queries in the subset_static_cache plugin (jeremyevans)

* Optimize Model.as_set calls to avoid queries in the static_cache plugin (jeremyevans)

* Support filtering by associations with sets in the pg_array_associations plugin (jeremyevans)

* Support sets in the to_dot extension (jeremyevans)

* Support splitting nil values from sets in the split_array_nil extension (jeremyevans)

* Support sets as input where arrays are accepted as input and order doesn't matter in the pg_hstore_ops/pg_json_ops extensions (jeremyevans)

* Auto parameterize IN/NOT IN with sets in the pg_auto_parameterize_in_array extension (jeremyevans)

* Auto parameterize IN/NOT IN with sets of integers in the pg_auto_parameterize extension (jeremyevans)

* Support sets in the eval_inspect extension (jeremyevans)

* Support sets of integers or strings for include validations in the constraint_validations extension (jeremyevans)

* Support filtering by associations using a set of associated objects (jeremyevans)

* Disallow typecasting sets to string (similar to how hash and array are disallowed) (jeremyevans)

* Deprecate the set_literalizer extension (jeremyevans)

* Support sets in dataset filters similar to arrays, using IN/NOT IN (jeremyevans)

* Add Dataset#as_set and Dataset#select_set, as Set will be a core class in Ruby 4 (jeremyevans)

* Add support for Database#add_index :only option on PostgreSQL 11+ (KirIgor) (#2343)

* Add support for Database#indexes :invalid option on PostgresSQL (KirIgor, jeremyevans) (#2343)

=== 5.98.0 (2025-11-01)

* Make insert_returning_select use RETURNING when using table_select plugin (jeremyevans) (#2339)

* Fix Database#listen in postgres adapter to ignore all notifications after UNLISTEN (jeremyevans)
